# server/docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api
 consumes:
-  - application/json
+- application/json
 definitions:
   Login:
     properties:
@@ -15,10 +15,49 @@ definitions:
         type: string
         x-go-name: Username
     required:
-      - username
-      - password
+    - username
+    - password
     type: object
     x-go-package: github.com/Davidmnj91/myrents/pkg/login
+  Profile:
+    properties:
+      birth_date:
+        description: The BirthDate of the user
+        example: "2000-12-12"
+        type: string
+        x-go-name: BirthDate
+      email:
+        description: The Email of the user
+        example: myemail@me.com
+        type: string
+        x-go-name: Email
+      id_number:
+        description: The IDNumber of the user
+        example: 01234567-N
+        type: string
+        x-go-name: IDNumber
+      name:
+        description: The Name of the user
+        example: David
+        type: string
+        x-go-name: Name
+      phone:
+        description: The Phone of the user
+        example: "666000222"
+        type: string
+        x-go-name: Phone
+      surname:
+        description: The Surname of the user
+        example: Sanchez
+        type: string
+        x-go-name: Surname
+      username:
+        description: The name of the user in the app
+        example: myUserName
+        type: string
+        x-go-name: Username
+    type: object
+    x-go-package: github.com/Davidmnj91/myrents/pkg/user_profile
   Register:
     properties:
       birth_date:
@@ -62,14 +101,14 @@ definitions:
         type: string
         x-go-name: Username
     required:
-      - username
-      - password
-      - name
-      - surname
-      - id_number
-      - email
-      - phone
-      - birth_date
+    - username
+    - password
+    - name
+    - surname
+    - id_number
+    - email
+    - phone
+    - birth_date
     type: object
     x-go-package: github.com/Davidmnj91/myrents/pkg/user_register
 host: localhost:5000
@@ -82,20 +121,20 @@ paths:
     post:
       operationId: login-user
       parameters:
-        - description: Body to log in a user
-          in: body
-          name: Body
-          required: true
-          schema:
-            $ref: '#/definitions/Login'
+      - description: Body to log in a user
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Login'
       responses:
         "200":
-          description: Successful login, bearer token in "authorization" header
+          $ref: '#/responses/logged-user'
         "500":
           description: Internal server error
       summary: Logs in a user account into the system.
       tags:
-        - auth
+      - auth
   /logout:
     delete:
       operationId: logout
@@ -104,19 +143,38 @@ paths:
           description: Successful logout
         "500":
           description: Internal server error
+      security:
+      - loggedIn:
+        - '[]'
       summary: Logs out a user account from the system.
       tags:
-        - auth
+      - auth
+  /profile:
+    get:
+      operationId: profile-user
+      responses:
+        "200":
+          description: Successful retrieval
+          schema:
+            $ref: '#/definitions/Profile'
+        "500":
+          description: Internal server error
+      security:
+      - loggedIn:
+        - '[]'
+      summary: Returns the authenticated user's profile.
+      tags:
+      - user
   /register:
     post:
       operationId: register-user
       parameters:
-        - description: Body to register a user
-          in: body
-          name: Body
-          required: true
-          schema:
-            $ref: '#/definitions/Register'
+      - description: Body to register a user
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Register'
       responses:
         "200":
           description: Successful registration
@@ -124,7 +182,7 @@ paths:
           description: Internal server error
       summary: Creates a new user in the system.
       tags:
-        - user
+      - user
   /removeAccount:
     delete:
       operationId: remove-account
@@ -133,11 +191,30 @@ paths:
           description: Successful delete
         "500":
           description: Internal server error
+      security:
+      - loggedIn:
+        - '[]'
       summary: Deletes an existing account on the system.
       tags:
-        - user
+      - user
 produces:
-  - application/json
+- application/json
+responses:
+  logged-user:
+    description: Successfully logged-in user
+    headers:
+      Authorization:
+        description: The authenticated user bearer JWT token Bearer base64EncodedJwtToken
+        type: string
 schemes:
-  - http
+- http
+security:
+- loggedIn:
+  - '[]'
+securityDefinitions:
+  loggedIn:
+    description: Bearer token of the logged-in user
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
